--- a/pikk.html
+++ b/pikk.html
@@ -5,6 +5,6 @@
        </head>
        <body>
             hello, fitte
-            here is a feture
+            here is a feture new
             </body>
             </html>
